--- a/e-horse4/src/main/webapp/template/headerTemplate.xhtml
+++ b/e-horse4/src/main/webapp/template/headerTemplate.xhtml
@@ -31,8 +31,7 @@
 				<f:facet name="options">
 					<p:inputText style="margin-right:10px" placeholder="Search" />
 					
-					<p:commandButton type="button" value="Logout" action="#{aMB.deco}"
-						icon="ui-icon-extlink" />
+					<a href="index.xhtml">Déconnexion</a>
 				</f:facet>
 			</p:menubar>
 		</h:form>
