--- a/e-horse4/src/main/webapp/template/headerClientTemplate.xhtml
+++ b/e-horse4/src/main/webapp/template/headerClientTemplate.xhtml
@@ -1,5 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
@@ -8,6 +7,7 @@
 	xmlns:p="http://primefaces.org/ui">
 
 <h:head>
+
 	<title>Header</title>
 </h:head>
 
@@ -17,20 +17,22 @@
 			<p:growl id="messages" />
 			<p:menubar >
 				<p:menuitem value="Accueil" url="index.xhtml" />
-				<p:submenu label="Produits" >
-					<p:menuitem value="Tous les produits" url="#" />
-					<p:menuitem value="Catégorie 1" url="#" />
-					<p:menuitem value="Catégorie 2" url="#" />
+				
+				<p:submenu label="Produits">
+					<p:menuitem value="Tous les produits" url="listeProduitClient.xhtml" />
+					<p:menuitem value="Par catégorie" url="listeCategorieClient.xhtml" />
+					<p:menuitem value="Par id" url="RechercheProdId.xhtml" />
 				</p:submenu>
-					<p:menuitem value="Voir le Compte/panier" url="panier.xhtml" />
+				
+					<p:menuitem value="Voir le Compte/panier" url="#" />
 			
 				<f:facet name="options">
 				<p:inputMask style="margin-right:10px" placeholder="Search" value="#{prMB.produit.designation}" />
-				<p:commandButton value="Chercher" action="#{prMB.getProduitByNom}"
+				<p:commandButton value="Chercher un produit" action="#{prMB.getProduitByNom}"
 			update="@all" />
 				</f:facet>
 			</p:menubar>
 		</h:form>
-	</ui:composition>
+	</ui:composition> 
 </body>
 </html>
